--- a/index.html
+++ b/index.html
@@ -8,113 +8,80 @@
 <style>
 body {
   font-family: system-ui, sans-serif;
-  background: linear-gradient(180deg, #eaf4ff, #f4f6f8);
-  padding: 20px;
+  background: linear-gradient(180deg,#eef2f7,#f4f6f8);
+  padding:20px;
 }
 
 .card {
-  max-width: 900px;
-  margin: auto;
-  background: #fff;
-  padding: 24px;
-  border-radius: 16px;
-  box-shadow: 0 6px 18px rgba(0,0,0,0.08);
-}
-
-h1, h2, h3 {
-  text-align: center;
+  max-width:900px;
+  margin:auto;
+  background:#fff;
+  padding:24px;
+  border-radius:14px;
 }
 
 button {
-  padding: 14px 22px;
-  font-size: 18px;
-  cursor: pointer;
-  border-radius: 10px;
-  border: none;
+  padding:14px 20px;
+  font-size:18px;
+  cursor:pointer;
+  border:none;
+  border-radius:10px;
 }
 
 button.primary {
-  background: #2ecc71;
-  color: white;
-  font-weight: bold;
-}
-
-button.secondary {
-  background: #3498db;
-  color: white;
-  margin-right: 10px;
-}
-
-button.print {
-  background: #555;
-  color: white;
+  background:#2ecc71;
+  color:white;
+  margin-top:14px;
 }
 
 input {
-  padding: 14px;
-  font-size: 18px;
-  border-radius: 10px;
-  border: 1px solid #ccc;
-  width: 100%;
-  max-width: 280px;
-  text-align: center;
+  padding:14px;
+  font-size:18px;
+  width:100%;
+  max-width:320px;
+  margin-top:14px;
+  text-align:center;
 }
 
-.overlay {
-  position: fixed;
-  inset: 0;
-  display: none;
-  align-items: center;
-  justify-content: center;
-  font-size: 40px;
-  font-weight: bold;
-  color: white;
-  z-index: 1000;
-}
-
-.overlay.correct { background: rgba(0,160,0,0.85); }
-.overlay.wrong { background: rgba(200,0,0,0.85); }
-
-.print-page { page-break-after: always; }
-.print-item { margin-bottom: 20px; }
-.notes { border: 1px dashed #aaa; height: 40px; margin-top: 6px; }
-
-.qr-label { font-weight: bold; margin-bottom: 6px; }
-
-.search {
-  margin: 20px auto;
-  display: block;
-  max-width: 400px;
+.center {
+  text-align:center;
 }
 
 .hunt-card {
-  background: #f9fbff;
-  border-radius: 14px;
-  padding: 16px;
-  margin-bottom: 16px;
-  text-align: center;
+  padding:16px;
+  border-radius:12px;
+  background:#f8fafc;
+  margin-bottom:14px;
 }
 
-.actions {
-  margin-top: 10px;
+.search {
+  width:100%;
+  padding:12px;
+  font-size:16px;
+  margin:16px 0;
 }
 
-.play-screen {
-  text-align: center;
+.overlay {
+  position:fixed;
+  inset:0;
+  display:none;
+  align-items:center;
+  justify-content:center;
+  font-size:40px;
+  font-weight:bold;
+  color:white;
+  z-index:1000;
 }
+.overlay.correct { background:rgba(0,160,0,0.85); }
+.overlay.wrong { background:rgba(200,0,0,0.85); }
 
-.play-clue {
-  font-size: 28px;
-  font-weight: bold;
-  margin-bottom: 24px;
-}
-
-.play-input {
-  margin-bottom: 20px;
-}
+.print-page { page-break-after:always; }
+.print-item { margin-bottom:20px; }
+.notes { border:1px dashed #aaa; height:40px; margin-top:6px; }
+.qr-label { font-weight:bold; margin-bottom:6px; }
 
 @media print {
-  button, input { display: none; }
+  button, .search { display:none; }
 }
 </style>
 </head>
@@ -218,11 +185,9 @@ function home(){
     <input class="search" placeholder="Search hunts...">
     ${hunts.map(h=>`
       <div class="hunt-card">
-        <h3>${h.name} (${h.steps.length} steps)</h3>
-        <div class="actions">
-          <button class="secondary" onclick="location='?start=${h.id}'">▶ Test</button>
-          <button class="print" onclick="location='?print=${h.id}'">🖨 Print Instructions</button>
-        </div>
+        <strong>${h.name} (${h.steps.length} steps)</strong><br><br>
+        <button onclick="location='?start=${h.id}'">▶ Test</button>
+        <button onclick="location='?print=${h.id}'">🖨 Print Instructions</button>
       </div>
     `).join("")}
   `;
@@ -232,20 +197,19 @@ function home(){
 function startPage(id){
   const h = hunts.find(x=>x.id===id);
   app.innerHTML = `
+<div class="center">
 <h1>🎉 Welcome, Explorer!</h1>
 <p><strong>${h.name}</strong></p>
 <p>You have been invited on a special scavenger hunt!</p>
-<p>Around this place are hidden clues waiting to be found.<br>Each clue will lead you to the next one.</p>
-<p>When you find a clue, you might need to:</p>
-<ul>
+<p>Around this place are hidden clues waiting to be found.<br>
+Each clue will lead you to the next one.</p>
+<ul style="text-align:left;display:inline-block">
 <li>Look carefully</li>
 <li>Think smart</li>
 <li>Scan a QR code</li>
 <li>Type in a secret number</li>
 </ul>
-<p>Don’t worry — there are no wrong turns, just keep trying!</p>
-<p>When you’re ready…<br>Tap the button below to begin your adventure! 🚀</p>
-<div style="text-align:center">
+<p>When you’re ready…</p>
 <button class="primary" onclick="location='?play=${id}&s=0'">▶️ Start the Hunt</button>
 </div>
 `;
@@ -256,26 +220,26 @@ function play(){
   const h = hunts.find(x=>x.id===q.get("play"));
   const s = parseInt(q.get("s"));
   if(s>=h.steps.length){
-    app.innerHTML = `<h2>🎉 Hunt Complete!</h2>`;
+    app.innerHTML = `<h2 class="center">🎉 Hunt Complete!</h2>`;
     return;
   }
   const step = h.steps[s];
   app.innerHTML = `
-    <div class="play-screen">
-      <div class="play-clue">${step.clue}</div>
-      <div class="play-input">
-        <input id="ans" placeholder="Enter 6-digit code">
-      </div>
-      <button class="primary" onclick="check('${step.code}',${s})">Submit</button>
-    </div>
-  `;
+<div class="center">
+  <h2 style="font-size:26px;font-weight:700">${step.clue}</h2>
+  <input id="ans" placeholder="Enter 6-digit code">
+  <br>
+  <button class="primary" onclick="check('${step.code}',${s})">Submit</button>
+</div>
+`;
 }
 
+/* ===== FIXED LINE (NO TEMPLATE LITERALS) ===== */
 function check(c,s){
   const v=document.getElementById("ans").value.trim();
   if(v===c){
     show("correct");
-    setTimeout(()=>location=\`?play=\${q.get("play")}&s=\${s+1}\`,900);
+    setTimeout(()=>location='?play=' + q.get("play") + '&s=' + (s+1),900);
   } else show("wrong");
 }
 
