--- a/Create.html
+++ b/Create.html
@@ -1,1 +1,236 @@
-<>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Create New Scavenger Hunt</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<style>
+body {
+  font-family: system-ui, sans-serif;
+  background: linear-gradient(135deg, #eef2f7, #f9fbff);
+  padding: 20px;
+}
+
+.container {
+  max-width: 1000px;
+  margin: auto;
+  background: #fff;
+  border-radius: 14px;
+  padding: 24px;
+}
+
+h1 {
+  text-align: center;
+  margin-bottom: 6px;
+}
+
+.subtitle {
+  text-align: center;
+  color: #666;
+  margin-bottom: 24px;
+}
+
+/* Theme selector */
+.themes {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+  gap: 14px;
+  margin-bottom: 30px;
+}
+
+.theme {
+  border: 2px solid #ddd;
+  border-radius: 12px;
+  padding: 16px;
+  text-align: center;
+  cursor: pointer;
+  transition: 0.2s;
+}
+
+.theme:hover {
+  border-color: #4f8cff;
+}
+
+.theme span {
+  display: block;
+  font-size: 28px;
+  margin-bottom: 6px;
+}
+
+/* Inputs */
+label {
+  font-weight: bold;
+  display: block;
+  margin-top: 20px;
+  margin-bottom: 6px;
+}
+
+input[type="text"], textarea, select {
+  width: 100%;
+  padding: 10px;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+}
+
+textarea {
+  resize: vertical;
+}
+
+/* Steps */
+.steps {
+  margin-top: 30px;
+}
+
+.step-card {
+  border: 1px solid #ddd;
+  border-radius: 12px;
+  padding: 18px;
+  margin-bottom: 18px;
+  background: #fafbfc;
+}
+
+.step-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.step-number {
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.remove {
+  background: none;
+  border: none;
+  color: #c00;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.or {
+  text-align: center;
+  margin: 12px 0;
+  font-weight: bold;
+  color: #777;
+}
+
+/* Buttons */
+.actions {
+  display: flex;
+  gap: 12px;
+  justify-content: center;
+  margin-top: 30px;
+}
+
+button {
+  padding: 14px 20px;
+  font-size: 16px;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+}
+
+.add-step {
+  background: #eee;
+}
+
+.preview {
+  background: #4caf50;
+  color: white;
+}
+
+.back {
+  background: #bbb;
+}
+
+/* Preview panel */
+.preview-panel {
+  margin-top: 40px;
+  border-top: 2px dashed #ddd;
+  padding-top: 20px;
+}
+
+.preview-panel h2 {
+  text-align: center;
+}
+
+.preview-item {
+  margin-bottom: 12px;
+  padding: 10px;
+  border-radius: 8px;
+  background: #f4f6f8;
+}
+</style>
+</head>
+
+<body>
+
+<div class="container">
+
+  <h1>🛠 Create a New Scavenger Hunt</h1>
+  <div class="subtitle">Build your hunt step-by-step</div>
+
+  <!-- Theme Selection -->
+  <label>Select a Theme</label>
+  <div class="themes">
+    <div class="theme"><span>🎮</span>Fortnite</div>
+    <div class="theme"><span>🟣</span>Escape</div>
+    <div class="theme"><span>🧠</span>Hacker</div>
+    <div class="theme"><span>🎄</span>Festive</div>
+    <div class="theme"><span>🎨</span>Custom</div>
+  </div>
+
+  <!-- Hunt Title -->
+  <label>Hunt Title</label>
+  <input type="text" placeholder="Enter hunt name">
+
+  <!-- Steps -->
+  <div class="steps">
+    <h2>Steps</h2>
+
+    <div class="step-card">
+      <div class="step-header">
+        <div class="step-number">Step 1</div>
+        <button class="remove">✖ Remove</button>
+      </div>
+
+      <label>Use an existing clue</label>
+      <select>
+        <option>— Select from existing hunts —</option>
+        <option>Escape the House → Mirror clue</option>
+        <option>Fortnite IRL → Storm incoming</option>
+        <option>System Breach → SYSTEM ONLINE</option>
+      </select>
+
+      <div class="or">OR</div>
+
+      <label>Write your own clue</label>
+      <textarea rows="3" placeholder="Enter your custom clue"></textarea>
+
+      <label>Location Label</label>
+      <input type="text" placeholder="Where this clue is hidden">
+    </div>
+
+  </div>
+
+  <!-- Actions -->
+  <div class="actions">
+    <button class="add-step">➕ Add Step</button>
+    <button class="preview">👁 Preview</button>
+    <button class="back" onclick="location.href='index.html'">⬅ Back</button>
+  </div>
+
+  <!-- Preview -->
+  <div class="preview-panel">
+    <h2>Preview</h2>
+    <div class="preview-item">Step 1: [Clue preview appears here]</div>
+  </div>
+
+</div>
+
+</body>
+</html>
