--- a/create-hunt.html
+++ b/create-hunt.html
@@ -6,219 +6,247 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
-body{
-  font-family:system-ui,sans-serif;
-  background:linear-gradient(180deg,#eef2f7,#f4f6f8);
+body {
+  font-family: system-ui, sans-serif;
+  background: linear-gradient(180deg,#eef2f7,#f4f6f8);
   padding:20px;
 }
-.card{
+
+.card {
   max-width:900px;
   margin:auto;
   background:#fff;
   padding:24px;
   border-radius:14px;
 }
-h1,h2{margin-top:0}
-select,textarea,input{
+
+h1,h2 { margin-top:0; }
+
+select, textarea, input {
   width:100%;
   padding:12px;
   font-size:16px;
-  margin-top:8px;
+  margin-top:10px;
 }
-textarea{min-height:80px}
-button{
+
+button {
   padding:10px 14px;
-  font-size:15px;
+  font-size:16px;
   border:none;
   border-radius:8px;
   cursor:pointer;
 }
-.primary{background:#2ecc71;color:white}
-.secondary{background:#3498db;color:white}
-.ghost{background:#e5e7eb}
 
-.clue-card{
+button.primary { background:#2ecc71; color:white; }
+button.secondary { background:#3498db; color:white; }
+button.danger { background:#e74c3c; color:white; }
+
+.section {
+  margin-bottom:24px;
+}
+
+.clue-list {
+  margin-top:20px;
+}
+
+.clue-card {
   background:#f8fafc;
   border-radius:12px;
-  padding:16px;
-  margin-bottom:16px;
-  transition:transform .2s ease,opacity .2s ease;
+  padding:14px;
+  margin-bottom:12px;
+  transition: transform 0.25s ease, opacity 0.25s ease;
 }
-.clue-header{
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-}
-.clue-number{
-  font-weight:700;
-}
-.controls button{margin-left:6px}
 
-.mode-select{margin-top:10px}
-.ai-box{
-  background:#eef6ff;
+.clue-header {
+  font-weight:700;
+  margin-bottom:6px;
+}
+
+.location {
+  font-weight:600;
+  color:#555;
+  margin-top:4px;
+}
+
+.controls {
+  margin-top:10px;
+  display:flex;
+  gap:8px;
+  flex-wrap:wrap;
+}
+
+.preview {
+  background:#eef3f7;
   padding:12px;
   border-radius:10px;
   margin-top:10px;
 }
-.ai-suggestion{
-  background:white;
-  padding:10px;
-  border-radius:8px;
-  margin-bottom:8px;
+
+.fade-move {
+  opacity:0;
+  transform:translateY(10px);
 }
-.ai-suggestion button{margin-right:6px}
-.hidden{display:none}
 </style>
 </head>
 
 <body>
 
 <div class="card">
-<h1>Create a New Hunt</h1>
+  <h1>Create New Hunt (UI Test)</h1>
 
-<label><strong>Theme</strong></label>
-<select id="theme">
-  <option>Escape Adventure</option>
-  <option>Fortnite IRL</option>
-  <option>Hacker / System Breach</option>
-  <option>Fantasy Quest</option>
-  <option>Pirate</option>
-  <option>Detective</option>
-  <option>Custom</option>
-</select>
+  <!-- EXISTING CLUES -->
+  <div class="section">
+    <h2>Add from Existing Hunts</h2>
 
-<hr>
+    <select id="huntSelect">
+      <option value="">Select a hunt…</option>
+    </select>
 
-<div id="clues"></div>
+    <select id="clueSelect" disabled>
+      <option value="">Select a clue…</option>
+    </select>
 
-<button class="secondary" onclick="addClue()">➕ Add Clue</button>
+    <div id="cluePreview" class="preview" hidden></div>
+
+    <button class="secondary" onclick="addExistingClue()" style="margin-top:10px">
+      ➕ Add This Clue
+    </button>
+  </div>
+
+  <!-- WRITE YOUR OWN -->
+  <div class="section">
+    <h2>Write Your Own Clue</h2>
+
+    <textarea id="customClue" placeholder="Clue text"></textarea>
+    <input id="customLocation" placeholder="Location (where QR will be hidden)">
+
+    <button class="primary" onclick="addCustomClue()" style="margin-top:10px">
+      ➕ Add Custom Clue
+    </button>
+  </div>
+
+  <!-- CLUE PLAN -->
+  <div class="section">
+    <h2>Hunt Plan</h2>
+    <div id="clueList" class="clue-list"></div>
+  </div>
+
 </div>
 
 <script>
-let clueCount = 0;
-
-const BASE_HUNTS = [
-  {name:"Escape the House", clues:["Mirror","Bookshelf","Fridge"]},
-  {name:"Fortnite IRL", clues:["Gaming Desk","Fridge","Garage"]},
-  {name:"System Breach", clues:["Router","Keyboard","Desk"]}
+/* ===== MOCK SOURCE HUNTS (READ-ONLY, UI ONLY) ===== */
+const SOURCE_HUNTS = [
+  {
+    name:"Escape the House",
+    clues:[
+      { clue:"I show your face but I’m not a photo. I hang on walls and doors. Where am I?", location:"Mirror" },
+      { clue:"I open wide but never talk. I keep food safe and cold. Don’t forget to close me!", location:"Fridge" }
+    ]
+  },
+  {
+    name:"Fortnite IRL",
+    clues:[
+      { clue:"You’ve dropped in. First loot location: Where controllers go when the game is off.", location:"Gaming Desk" },
+      { clue:"Shields up! Find the place where drinks recharge HP.", location:"Fridge" }
+    ]
+  }
 ];
 
-function addClue(){
-  clueCount++;
-  const div=document.createElement("div");
-  div.className="clue-card";
-  div.innerHTML=`
-    <div class="clue-header">
-      <div class="clue-number">Clue ${clueCount}</div>
-      <div class="controls">
-        <button class="ghost" onclick="moveUp(this)">⬆</button>
-        <button class="ghost" onclick="moveDown(this)">⬇</button>
-      </div>
-    </div>
+/* ===== STATE ===== */
+let plan = [];
 
-    <div class="mode-select">
-      <label><strong>Clue Source</strong></label>
-      <select onchange="switchMode(this)">
-        <option value="existing">Use existing clue</option>
-        <option value="write">Write my own</option>
-        <option value="ai">Get AI help ✨</option>
-      </select>
-    </div>
+/* ===== INIT ===== */
+const huntSelect = document.getElementById("huntSelect");
+const clueSelect = document.getElementById("clueSelect");
+const preview = document.getElementById("cluePreview");
+const list = document.getElementById("clueList");
 
-    <div class="mode existing">
-      <select onchange="populateClues(this)">
-        <option>Select hunt</option>
-        ${BASE_HUNTS.map(h=>`<option>${h.name}</option>`).join("")}
-      </select>
-      <select class="clue-list">
-        <option>Select clue</option>
-      </select>
-    </div>
+SOURCE_HUNTS.forEach((h,i)=>{
+  const o=document.createElement("option");
+  o.value=i;
+  o.textContent=h.name;
+  huntSelect.appendChild(o);
+});
 
-    <div class="mode write hidden">
-      <textarea placeholder="Write your clue here..."></textarea>
-    </div>
-
-    <div class="mode ai hidden">
-      <input placeholder="Location (e.g. Fridge)">
-      <button class="secondary" onclick="mockAI(this)">✨ Get Suggestions</button>
-      <div class="ai-box hidden"></div>
-    </div>
-  `;
-  document.getElementById("clues").appendChild(div);
-  renumber();
-}
-
-function switchMode(sel){
-  const card=sel.closest(".clue-card");
-  card.querySelectorAll(".mode").forEach(m=>m.classList.add("hidden"));
-  card.querySelector(".mode."+sel.value).classList.remove("hidden");
-}
-
-function populateClues(sel){
-  const hunt=BASE_HUNTS.find(h=>h.name===sel.value);
-  const list=sel.parentElement.querySelector(".clue-list");
-  list.innerHTML="<option>Select clue</option>";
-  if(hunt){
-    hunt.clues.forEach(c=>{
-      const o=document.createElement("option");
-      o.textContent=c;
-      list.appendChild(o);
-    });
+/* ===== EVENTS ===== */
+huntSelect.onchange = () => {
+  clueSelect.innerHTML = `<option value="">Select a clue…</option>`;
+  preview.hidden = true;
+  if(huntSelect.value===""){
+    clueSelect.disabled=true;
+    return;
   }
-}
-
-function mockAI(btn){
-  const box=btn.nextElementSibling;
-  box.classList.remove("hidden");
-  box.innerHTML="";
-  const theme=document.getElementById("theme").value;
-  ["First","Second","Third"].forEach(t=>{
-    const d=document.createElement("div");
-    d.className="ai-suggestion";
-    d.innerHTML=`
-      <div><strong>${theme}:</strong> ${t} themed clue suggestion</div>
-      <button class="primary" onclick="acceptAI(this)">Accept</button>
-      <button class="ghost" onclick="editAI(this)">Edit</button>
-      <button class="ghost" onclick="this.parentElement.remove()">Discard</button>
-    `;
-    box.appendChild(d);
+  clueSelect.disabled=false;
+  SOURCE_HUNTS[huntSelect.value].clues.forEach((c,i)=>{
+    const o=document.createElement("option");
+    o.value=i;
+    o.textContent=`Clue ${i+1} — ${c.location}`;
+    clueSelect.appendChild(o);
   });
-}
+};
 
-function acceptAI(btn){
-  const text=btn.parentElement.querySelector("div").textContent;
-  const card=btn.closest(".clue-card");
-  card.querySelector(".mode.ai").innerHTML=
-    `<textarea>${text}</textarea>`;
-}
-
-function editAI(btn){
-  const text=btn.parentElement.querySelector("div").textContent;
-  const card=btn.closest(".clue-card");
-  card.querySelector(".mode.ai").innerHTML=
-    `<textarea>${text}</textarea>`;
-}
-
-function moveUp(btn){
-  const card=btn.closest(".clue-card");
-  if(card.previousElementSibling){
-    card.parentElement.insertBefore(card,card.previousElementSibling);
-    renumber();
+clueSelect.onchange = () => {
+  const h = SOURCE_HUNTS[huntSelect.value];
+  if(!h || clueSelect.value===""){
+    preview.hidden=true;
+    return;
   }
-}
-function moveDown(btn){
-  const card=btn.closest(".clue-card");
-  if(card.nextElementSibling){
-    card.parentElement.insertBefore(card.nextElementSibling,card);
-    renumber();
-  }
+  const c = h.clues[clueSelect.value];
+  preview.innerHTML = `
+    <strong>Clue:</strong><br>${c.clue}<br><br>
+    <strong>Location:</strong> ${c.location}
+  `;
+  preview.hidden=false;
+};
+
+/* ===== ADD CLUES ===== */
+function addExistingClue(){
+  if(huntSelect.value==="" || clueSelect.value==="") return;
+  const c = SOURCE_HUNTS[huntSelect.value].clues[clueSelect.value];
+  plan.push({ clue:c.clue, location:c.location });
+  render();
 }
 
-function renumber(){
-  document.querySelectorAll(".clue-card").forEach((c,i)=>{
-    c.querySelector(".clue-number").textContent="Clue "+(i+1);
+function addCustomClue(){
+  const clue=document.getElementById("customClue").value.trim();
+  const location=document.getElementById("customLocation").value.trim();
+  if(!clue||!location) return;
+  plan.push({ clue, location });
+  document.getElementById("customClue").value="";
+  document.getElementById("customLocation").value="";
+  render();
+}
+
+/* ===== REORDER / REMOVE ===== */
+function move(i,dir){
+  const n=i+dir;
+  if(n<0||n>=plan.length) return;
+  [plan[i],plan[n]]=[plan[n],plan[i]];
+  render();
+}
+
+function removeClue(i){
+  plan.splice(i,1);
+  render();
+}
+
+/* ===== RENDER ===== */
+function render(){
+  list.innerHTML="";
+  plan.forEach((c,i)=>{
+    const div=document.createElement("div");
+    div.className="clue-card";
+    div.innerHTML=`
+      <div class="clue-header">Clue ${i+1}</div>
+      ${c.clue}
+      <div class="location">📍 ${c.location}</div>
+      <div class="controls">
+        <button onclick="move(${i},-1)">⬆ Up</button>
+        <button onclick="move(${i},1)">⬇ Down</button>
+        <button class="danger" onclick="removeClue(${i})">🗑 Remove</button>
+      </div>
+    `;
+    list.appendChild(div);
   });
 }
 </script>
